Edited radio buttons
Disabled radio buttons and changed text color

--- a/MyZou.html
+++ b/MyZou.html
@@ -8,18 +8,18 @@
             <form>     
                 <p>Do you need access to basic bio demo and student data?</p>
                 <input type="radio" name="bio" value="view">View
-                <input type="radio" name="bio" value="update">Update
+                <input type="radio" name="bio"  value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>In addition to the above, do you need access to relations with institution citizenship, visa, decedant data, student enrollment, gpa, term history, 3C's, advisors, or student groups?</p>
                 <input type="radio" name="relations" value="view">View
                 <input type="radio" name="relations" value="update">Update
             <br>
                 <p>Do you need to add an advisor to a students record?</p>
-                <input type="radio" name="add" value="view">View
+                <input type="radio" name="add" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="add" value="update">Update
             <br>
                 <p>Do you need to schedule courses, assign faculty to a course, or generate permission numbers?</p>
-                <input type="radio" name="schedule" value="view">View
+                <input type="radio" name="schedule" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="schedule" value="update">Update
             <br>
                 <p>Do you need to assign or remove service indicators from a student's record?</p>
@@ -28,11 +28,11 @@
             <br>
                 <p>Do you need to view groups that a student is associated with?</p>
                 <input type="radio" name="associated" value="view">View
-                <input type="radio" name="associated" value="update">Update
+                <input type="radio" name="associated" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to view a student's class schedule?</p>
                 <input type="radio" name="class" value="view">View
-                <input type="radio" name="class" value="update">Update
+                <input type="radio" name="class" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to add or drop a course utilizing Enrollment Request?</p>
                 <input type="radio" name="enrollment" value="view">View
@@ -40,34 +40,34 @@
             <br>
                 <p>Do you need access to students study list, advisor, program/plan, demographic data, or e-mail address?</p>
                 <input type="radio" name="demographic" value="view">View
-                <input type="radio" name="demographic" value="update">Update
+                <input type="radio" name="demographic" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to create general or student specific permission numbers?</p>
-                <input type="radio" name="permission" value="view">View
+                <input type="radio" name="permission" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="permission" value="update">Update
             <br>
                 <p>Do you need to view class permission numbers which have been created for a course?</p>
                 <input type="radio" name="numbers" value="view">View
-                <input type="radio" name="numbers" value="update">Update
+                <input type="radio" name="numbers" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to view students enrolled, dropped or withdrawn in a course?</p>
                 <input type="radio" name="enrollment" value="view">View
-                <input type="radio" name="enrollment" value="update">Update
+                <input type="radio" name="enrollment" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to view a report manager?</p>
                 <input type="radio" name="report" value="view">View
-                <input type="radio" name="report" value="update">Update
+                <input type="radio" name="report" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to edit self service advisor information?</p>
-                <input type="radio" name="edit" value="view">View
+                <input type="radio" name="edit" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="edit" value="update">Update
             <br>
                 <p>Do you need to view enrollment summary, term statistics, and UM term staistics?</p>
                 <input type="radio" name="stats" value="view">View
-                <input type="radio" name="stats" value="update">Update
+                <input type="radio" name="stats" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need to allow printing of the Academic Advising Profile?</p>
-                <input type="radio" name="bio" value="view">View
+                <input type="radio" name="bio" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="bio" value="update">Update
             <br>
                 <p>Do you need to access test scores? If so, select all scores you wish to access.</p>
@@ -94,7 +94,7 @@
             <br>
                 <p>Do you need student financials access for staff outside of the cashier's office?</p>
                 <input type="radio" name="financials" value="view">View
-                <input type="radio" name="financials" value="update">Update
+                <input type="radio" name="financials" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need access to "Cost Centers"?</p>
                 <input type="radio" name="cost" value="view">View
@@ -102,7 +102,7 @@
             <br>  
                 <p>Do you need to access a student's financial aid or budgets?</p>
                 <input type="radio" name="aid" value="view">View
-                <input type="radio" name="aid" value="update">Update
+                <input type="radio" name="aid" value="update" disabled><label for="bio" style="color:#d3d3d3;">Update</label>
             <br>
                 <p>Do you need access to immunizations information?</p>
                 <input type="radio" name="immunizations" value="view">View
@@ -117,11 +117,11 @@
                 <input type="radio" name="relationships" value="update">Update
             <br>
                 <p>Do you need access to student groups?</p>
-                <input type="radio" name="groups" value="view">View
+                <input type="radio" name="groups" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="groups" value="update">Update
             <br>
                 <p>Do you need access to student health?</p>
-                <input type="radio" name="health" value="view">View
+                <input type="radio" name="health" value="view" disabled><label for="bio" style="color:#d3d3d3;">View</label>
                 <input type="radio" name="health" value="update">Update
             <br>
                 <p>Do you need access to support staff (Registrar's Office)?</p>
