Changed the .html to .php

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
    
    <body>
    		<h1>Enter your login Information</h1>
-   		<form  id="field" action="home.html" method="POST">
+   		<form  id="field" action="home.php" method="POST">
     			PawPrint: <input type="text" name="username"/>
     			<br></br>
     			Password: <input type="password" name="password"/>
@@ -39,7 +39,7 @@
     			<input class = "button" type = "submit" name= "submit" value = "Login" >   			
     	</form>
     	<div id="myDiv">
-    		<p>Don't have an account? Click here to <a href="CreateAccount.html">create an account</a></p>
+    		<p>Don't have an account? Click here to <a href="account.php">create an account</a></p>
     	<div>
     	
     	<!-- Latest compiled and minified JavaScript -->
